# simple-script

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  README.md
main/: CMakeLists.txt
main/ast/: CMakeLists.txt
main/ast/include/expression/: identifier_expression.hpp  identifier_node.hpp  number_node.hpp  string_node.hpp  string_operator_expression.hpp  string_operator_node.hpp
main/ast/include/statement/: assignment_statement.hpp  block_statement.hpp  conditional_statement.hpp  print_statement.hpp  var_declaration_list_statement.hpp  var_declaration_statement.hpp
main/ast/source/expression/: identifier_expression.cpp  identifier_node.cpp  number_node.cpp  string_node.cpp  string_operator_expression.cpp  string_operator_node.cpp
main/ast/source/statement/: assignment_statement.cpp  block_statement.cpp  conditional_statement.cpp  const_declaration_statement.cpp  print_statement.cpp  var_declaration_list_statement.cpp  var_declaration_statement.cpp
main/ast/test/: CMakeLists.txt
main/ast/test/expression/: CMakeLists.txt  identifier_expression_test.cpp  string_operator_expression_test.cpp
main/ast/test/statement/: CMakeLists.txt  assignment_statement_test.cpp  conditional_statement_test.cpp  print_statement_test.cpp  var_declaration_statement_test.cpp
main/compiler/: CMakeLists.txt
main/compiler/include/: compiler.hpp
main/compiler/source/: main.cpp
main/context/: CMakeLists.txt
main/context/include/: context.hpp
main/context/include/builtin_function/: builtin_assert.hpp  builtin_file_functions.hpp  builtin_input.hpp  builtin_print.hpp
main/context/include/function/: invokable_function.hpp
main/context/source/: context.cpp
main/context/source/builtin_function/: builtin_assert.cpp  builtin_file_functions.cpp  builtin_function_registry.cpp  builtin_input.cpp  builtin_print.cpp
main/context/source/function/: invokable_function.cpp
main/context/test/: CMakeLists.txt  context_test.cpp
main/interpreter/: CMakeLists.txt
main/interpreter/include/: interpreter.hpp
main/interpreter/source/: interpreter.cpp  main.cpp
main/lexer/: CMakeLists.txt
main/lexer/include/: comment.hpp  lexer.hpp  token.hpp  tokenizer.hpp
main/lexer/include/exception/: lexical_exception.hpp
main/lexer/include/rule/: boolean_rule.hpp  comment_rule.hpp  delimiter_rule.hpp  identifier_rule.hpp  number_rule.hpp  operator_rule.hpp  punctuation_rule.hpp  string_rule.hpp
main/lexer/source/: comment.cpp  lexer.cpp  lexer_factory.cpp  tokenizer.cpp
main/lexer/source/rule/: boolean_rule.cpp  comment_rule.cpp  delimiter_rule.cpp  identifier_rule.cpp  number_rule.cpp  operator_rule.cpp  punctuation_rule.cpp  string_rule.cpp
main/lexer/test/: CMakeLists.txt  lexer_rules_test.cpp  lexer_test.cpp  tokenizerTest.cpp
main/lexer/test/rule/: boolean_rule_test.cpp  comment_rule_test.cpp  identifier_rule_test.cpp  number_rule_test.cpp  operator_rule_test.cpp  punctuation_rule_test.cpp  string_rule_test.cpp
main/parser/: CMakeLists.txt
main/parser/include/: context.hpp  expression_parser.hpp  parser.hpp  scope.hpp  statement_parser.hpp
main/parser/include/ast/: syntax_leaf.hpp  syntax_node.hpp  syntax_tree.hpp
main/parser/include/exception/: syntax_exception.hpp
main/parser/include/expression/: expression_parser.hpp
main/parser/include/statement/: statement_parser.hpp
main/parser/source/: context.cpp  expression_parser.cpp  parser.cpp  scope.cpp  statement_parser.cpp
main/parser/source/ast/: syntax_leaf.cpp  syntax_leaf_node.cpp  syntax_node.cpp  syntax_tree.cpp
main/parser/source/expression/: expression_parser.cpp
main/parser/source/statement/: statement_parser.cpp
main/parser/test/: CMakeLists.txt  parserTest.cpp  parser_test.cpp
main/parser/test/ast/: arithmetic_operator_node_test.cpp  assignment_node_test.cpp  print_node_test.cpp  print_statement_node_test.cpp  string_operator_node_test.cpp  var_declaration_node_test.cpp
main/parser/test/expression/: parser_arithmetic_operator_expression_test.cpp  parser_boolean_expression_rule_test.cpp  parser_identifier_expression_rule_test.cpp  parser_number_expression_rule_test.cpp  parser_string_expression_rule_test.cpp  parser_string_operator_expression_rule_test.cpp  parser_ternary_expression_rule_test.cpp
main/parser/test/statement/: assignment_statement_rule_test.cpp  block_statement_rule_test.cpp  conditional_statement_rule_test.cpp
main/scope/: CMakeLists.txt
main/scope/include/: scope.hpp
main/scope/include/builtin_function/: builtin_assert.hpp  builtin_file_functions.hpp  builtin_input.hpp  builtin_print.hpp
main/scope/source/: scope.cpp
main/scope/source/builtin_function/: builtin_assert.cpp  builtin_file_functions.cpp  builtin_function_registry.cpp  (+2 more)
main/scope/test/: CMakeLists.txt  scope_test.cpp
main/type/: CMakeLists.txt
main/type/include/: type.hpp
main/type/source/: type.cpp
main/value/: CMakeLists.txt
main/value/include/: function_value.hpp  number_value.hpp  object_value.hpp  string_value.hpp
main/value/source/: boolean_value.cpp  function_value.cpp  number_value.cpp  object_value.cpp  string_value.cpp
main/value/test/: CMakeLists.txt
source/compiler/: CMakeLists.txt  compiler.cpp  compiler_asm.cpp  compiler_byte_code.cpp  compiler_machine.cpp  main.cpp
source/interpreter/: CMakeLists.txt  interpreter.cpp  main.cpp
source/lexer/: CMakeLists.txt  lexer.cpp  lexer_factory.cpp  token.cpp
source/lexer/rule/: boolean_rule.cpp  comment_rule.cpp  delimiter_rule.cpp  identifier_rule.cpp  number_rule.cpp  operator_rule.cpp  punctuation_rule.cpp  string_rule.cpp
test/: CMakeLists.txt
test/ast/expression/: identifier_expression_test.cpp
test/context/: context_test.cpp
test/lexer/: lexer_test.cpp
test/parser/: parser_test.cpp
test/parser/expression/: parser_arithmetic_operator_expression_test.cpp  parser_boolean_expression_rule_test.cpp  parser_identifier_expression_rule_test.cpp  parser_number_expression_rule_test.cpp  parser_string_expression_rule_test.cpp  parser_ternary_expression_rule_test.cpp
test/scope/: scope_test.cpp
(+720 files in other folders)
